Implement code changes to enhance functionality and improve performance

--- a/notebooks/sentiment_and_theme_Analysis.ipynb
+++ b/notebooks/sentiment_and_theme_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,62 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-06-09 06:54:00,722 - INFO - Scraping reviews for cbe\n",
-      "2025-06-09 06:54:04,311 - INFO - Successfully fetched 600 reviews for com.combanketh.mobilebanking\n",
-      "2025-06-09 06:54:04,325 - INFO - Saved 600 reviews for cbe to ../data/raw/cbe_review.csv\n",
-      "2025-06-09 06:54:04,326 - INFO - Scraping reviews for boe\n",
-      "2025-06-09 06:54:07,277 - INFO - Successfully fetched 600 reviews for com.boa.boaMobileBanking\n",
-      "2025-06-09 06:54:07,295 - INFO - Saved 600 reviews for boe to ../data/raw/boe_review.csv\n",
-      "2025-06-09 06:54:07,297 - INFO - Scraping reviews for dashen\n",
-      "2025-06-09 06:54:10,086 - INFO - Successfully fetched 450 reviews for com.dashen.dashensuperapp\n",
-      "2025-06-09 06:54:10,111 - INFO - Saved 450 reviews for dashen to ../data/raw/dashen_review.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "scraper = PlayStoreScraper()\n",
-    "reviews_by_bank = scraper.scrape_all()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " # Initialize and run preprocessor\n",
-    "preprocessor = ReviewPreprocessor()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-06-09 06:54:29,352 - INFO - Saved 596 processed reviews for boe\n",
-      "2025-06-09 06:54:29,424 - INFO - Saved 600 processed reviews for cbe\n",
-      "2025-06-09 06:54:29,443 - INFO - Saved 406 processed reviews for dashen\n"
-     ]
-    }
-   ],
-   "source": [
-    "preprocessor.process_all_banks()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,16 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-09 06:56:34,634 - INFO - Saved 596 processed reviews for boe\n",
-      "2025-06-09 06:56:34,664 - INFO - Saved 600 processed reviews for cbe\n",
-      "2025-06-09 06:56:34,693 - INFO - Saved 406 processed reviews for dashen\n"
+      "2025-06-11 21:32:28,906 - INFO - Saved 596 processed reviews for boe\n",
+      "2025-06-11 21:32:28,997 - INFO - Saved 600 processed reviews for cbe\n",
+      "2025-06-11 21:32:29,048 - INFO - Saved 408 processed reviews for dashen\n"
      ]
     }
    ],
@@ -113,11 +58,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "review_text",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "rating",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "date",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "bank_name",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "source",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "sentiment_label",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "sentiment_score",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "keywords",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "38f5a6cb-5365-4504-8da4-04a9125af486",
+       "rows": [
+        [
+         "0",
+         "I have a fitayah account, a type of interest free account, and because their system is unable to process anything for people like me I cant see any of my accounts in the account list on any transaction, although I can see it when performing security actions or checking my balance, as such this app is as useless to me as the previous one. Unbelievable",
+         "1",
+         "2024-02-18",
+         "boe",
+         "google_play",
+         "NEGATIVE",
+         "0.9997772574424744",
+         "fitayah account type interest account system people accounts account list transaction security actions balance app"
+        ],
+        [
+         "1",
+         "Can you please just make it functional. I dont think anyone cares how good it looks if not a single functionality works. Plus its not even aestheticaly nice. The loading animated icon has white irregular edges because the logo wasnt cut out correctly. The app doesnt work at all. It doesnt even login. It gets stuck on login just showing the logo animation and blames the issue on connectivity. Connectivity is fine and the proof is that this review is posted.",
+         "1",
+         "2024-04-15",
+         "boe",
+         "google_play",
+         "NEGATIVE",
+         "0.9288585782051086",
+         "functionality works aestheticaly nice loading icon edges logo app login logo animation issue connectivity connectivity proof review"
+        ],
+        [
+         "2",
+         "Developers the company takes too long to update the app, and throughout that process, the app is basically useless. We cant send money or even be able to check our account. They even take it down from the Play Store for a while. This whole process usually takes them 3 to 5 days. This is very disappointing. It is an improvement from the previous version of the app, but they still have a long way to go to compete with the likes of CBE. Transferring to other banks sometimes doesnt work.",
+         "2",
+         "2024-05-03",
+         "boe",
+         "google_play",
+         "NEGATIVE",
+         "0.9997995495796204",
+         "developers company app process app money account play store process days improvement version app way likes cbe banks"
+        ],
+        [
+         "3",
+         "This app is a joke. It crashes more than it works, takes forever to load, and half the features are just decorative at this point. Cant log in, cant transfer money, cant even check my balance without it bugging out. To the developer Are you actually trying to make this work, or is this some kind of social experiment to test our patience? Did you build this in your sleep? Because it definitely looks like it. If this is your idea of a functional app, maybe consider a different career path",
+         "1",
+         "2025-05-21",
+         "boe",
+         "google_play",
+         "NEGATIVE",
+         "0.9991939663887024",
+         "app joke features point money balance developer work kind experiment patience sleep idea app career path"
+        ],
+        [
+         "4",
+         "Hello, Im facing a problem with the BOA Mobile app. Every time I enter my phone number and password, the app crashes and shows an error that says BoaMobile closed because this app has a bug. I tried updating, reinstalling, and clearing cache, but nothing worked. Please fix this bug in the next update. I really need access to my account. Thank you.",
+         "1",
+         "2025-06-03",
+         "boe",
+         "google_play",
+         "NEGATIVE",
+         "0.999369204044342",
+         "problem boa mobile app time phone number password app error boamobile app bug cache bug update access account"
+        ]
+       ],
+       "shape": {
+        "columns": 8,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -230,7 +286,7 @@
        "4  problem boa mobile app time phone number passw...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
