Refactor sentiment analysis notebook: update execution counts and enhance markdown observations

--- a/notebooks/sentiment_and_theme_Analysis.ipynb
+++ b/notebooks/sentiment_and_theme_Analysis.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,6 @@
    ],
    "source": [
     "from src.review_preprocessor import ReviewPreprocessor\n",
-    "\n",
     "preprocessor = ReviewPreprocessor()\n",
     "preprocessor.process_all_banks()"
    ]
@@ -436,6 +435,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Key Observations:\n",
+    " - Banks Listed: The output lists three banks: boe, cbe, and dashen.\n",
+    " - Average Sentiment Scores:\n",
+    "     - boe: 0.975121\n",
+    "     - cbe: 0.973501\n",
+    "     - dashen: 0.981897\n",
+    " - Score Interpretation:\n",
+    "     - The sentiment scores appear to be in the range of 0 to 1, where higher scores typically indicate more positive sentiment.\n",
+    "     - All three banks have high sentiment scores, suggesting that customers generally have a positive perception of these institutions.\n",
+    " - Comparative Analysis:\n",
+    "     - dashen has the highest average sentiment score (0.981897), indicating the most favorable sentiment among the three.\n",
+    "     - boe and cbe have slightly lower scores but are still quite high, reflecting overall positive sentiment."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -519,11 +536,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Analysis\n",
+    "*  The graph highlights key themes in user feedback for the banks. Transaction-related feedback is the most prominent, particularly for cbe, while UX/UI is also significant for dashen. The insights from this graph can guide banks in focusing their improvements on transaction processes and user experience design. Addressing these themes could enhance overall customer satisfaction."
+   ]
   }
  ],
  "metadata": {
